@@ -1,16 +1,20 @@
-===Callibration===
+===Calibration===
 hive_number: 2
 walkspeed: 28
+gifted_vicious_bee: yes
 
 ===Gathering===
 gather_enable: yes
-gather_field: pinetree
+gather_field: pineapple
 gather_pattern: e_lol
 gather_size: m
 gather_width: 3
-gather_time:10
+gather_time:0
 pack:95
-before_gather_turn: right
+before_gather_turn: none
 turn_times: 2
 return_to_hive:walk
 whirligig_slot: 0
+
+===Kills===
+stump_snail: yes
